--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,7 +1,7 @@
 baseURL: https://fabian-moertter.github.io
 
 languageCode: bn
-title: "John's Blog"
+title: "Fabian's Blog"
 
 # Use Hugo modules to add theme
 module:
@@ -23,13 +23,18 @@ languages:
   en:
     languageCode: en
     languageName: English
-    title: "John's Blog"
+    title: "Fabian's Blog"
     weight: 1
   bn:
     languageCode: bn
     languageName: বাংলা
     title: জনের ব্লগ
     weight: 2
+  bn:
+    languageCode: de
+    languageName: German
+    title: "Fabians Blog"
+    weight: 3
 # default language for the content
 defaultContentLanguage: en
 
