--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -16,6 +16,6 @@ contactInfo:
 summary:
   - I am a Developer
   - I am a Devops
-  - I love servers
+  - I am a Bioinformatician
   - I work on open-source projects
   - I love to work with some fun projects
