--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -11,10 +11,10 @@ section:
 # Your experiences
 experiences:
 - company:
-    name: Example Co.
-    url: "https://www.example.com"
-    location: Dhaka Branch
-    logo: /images/sections/experiences/company1.jpg
+    name: SSC-Services GmbH
+    url: "https://ssc-services.de"
+    location: Böblingen, Germany
+    logo: /images/sections/experiences/logo-ssc-services.png
     # Can optionally show a different logo for dark theme
     # darklogo: /images/sections/experiences/company1.jpg
     # company overview
@@ -39,9 +39,9 @@ experiences:
     - Learn k,d,w technology for xyz.
 
 - company:
-    name: PreExample Co.
-    url: "https://www.example.com"
-    location: Nowhere
+    name: Paul-Ehrlich-Institut
+    url: "https://www.pei.de"
+    location: Langen (Hessen), Germany
     logo: /images/sections/experiences/company2.jpg
     # Can optionally show a different logo for dark theme
     # darklogo: /images/sections/experiences/company2.jpg
@@ -56,9 +56,9 @@ experiences:
     - See lots of example videos.
 
 - company:
-    name: Intern Counting Company (ICC).
+    name: LGC Genomics GmbH
     url: "https://www.example.com"
-    location: Intern Land
+    location: Berlin, Germany
     logo: /images/sections/experiences/company3.jpg
     # Can optionally show a different logo for dark theme
     # darklogo: /images/sections/experiences/company3.jpg
@@ -66,7 +66,7 @@ experiences:
   positions:
   - designation: Intern
     start: Jun 2015
-    end: Jan 2016
+    end: Feb 2022
     responsibilities:
     - Count lost of interns.
     - Count more interns.
