--- a/data/en/sections/education.yaml
+++ b/data/en/sections/education.yaml
@@ -95,10 +95,11 @@ degrees:
   - Pellentesque ut fringilla magna.
 - name: Secondary School Certificate
   icon: fa-school
-  timeframe: 2005-2010
+  timeframe: 2009
   institution:
-    name: JK School of Science
-  grade: #(optional)
-    scale: GPA
-    achieved: 4.5
-    outOf: 5
+    name: Justus-Knecht-Gymnasium Bruchsal
+    url: "https://www.jkg-bruchsal.de"
+  # grade: #(optional)
+  #   scale: GPA
+  #   achieved: 4.5
+  #   outOf: 5
