--- a/data/en/sections/experiences.yaml
+++ b/data/en/sections/experiences.yaml
@@ -45,7 +45,7 @@ experiences:
     # darklogo: /images/sections/experiences/company2.jpg
     overview: PreExample Co. is a gateway company to enter into Example co. So, nothing special here.
   positions:
-  - designation: Data Scientist
+  - designation: Bioinformatics Engineer
     start: Apr 2022
     end: Feb 2024
     responsibilities:
