--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -14,8 +14,8 @@ contactInfo:
 
 # some summary about what you do
 summary:
+  - I am a Devops Engineer
   - I am a Developer
-  - I am a Devops
   - I am a Bioinformatician
-  - I work on open-source projects
+  - I love Linux
   - I love to work with some fun projects
